--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -118,10 +118,10 @@
                 </div>
             </div>
             
-            <div class="relative mt-12 lg:mt-0" data-aos="fade-left">
+            <div class="relative mt-12 mb-4 lg:mt-0" data-aos="fade-left">
                 <div class="relative z-10">
                     <div class="glass-card rounded-3xl p-1.5 shadow-2xl">
-                        <img src="https://illustrations.popsy.co/white/collaboration.svg" alt="Échange de compétences" class="w-full h-auto rounded-2xl">
+                        <img src="{{ asset('images/illustration-hero.jpg') }}" alt="Échange de compétences" class="w-full h-auto rounded-2xl" width="600" height="300" loading="lazy">
                     </div>
                 </div>
                 <!-- Floating elements -->
@@ -133,8 +133,8 @@
     
     <!-- Scroll indicator -->
     <div class="absolute bottom-8 left-1/2 transform -translate-x-1/2">
-        <a href="#features" class="flex flex-col items-center text-white/70 hover:text-white transition-colors duration-300">
-            <span class="text-sm mb-2">Découvrir</span>
+        <a href="#features" class="flex flex-col items-center text-white hover:text-white font-medium transition-colors duration-300">
+            <span class="text-lg mb-2">Découvrir</span>
             <svg class="w-6 h-6 animate-bounce" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 14l-7 7m0 0l-7-7m7 7V3"></path>
             </svg>
